--- a/journal/201906.md
+++ b/journal/201906.md
@@ -49,7 +49,7 @@ Open
 
 Work on embedding basic Lightning functionality (open/close channels, funding/withdrawing funds, create invoices, send payments) into Decrediton is nearing completion. {Is there any more we can say here? Expected release date (roughly)? Will this trigger another version bump (1.5.0?)}. Progress continues on refactoring Decrediton to use a finite state machine continues, along with minor UI tweaks and bug fixes. 
 
-[Politeia](https://github.com/decred/politeia): {}
+[Politeia](https://github.com/decred/politeia): Work this month was mostly incremental improvements and bug fixing, with most of the improvements being related to the Contractor Management System use of Politeia. Friction in the process of submitting invoices has been significantly reduced.
 
 [dcrlnd](https://github.com/decred/dcrlnd):
 
@@ -81,7 +81,7 @@ Release of the iOS wallet nears, with [Release Candidate 2](https://github.com/r
 * RC1 https://www.reddit.com/r/decred/comments/bxje6l/decred_wallet_for_ios_release_client_1/
 * RC2 https://www.reddit.com/r/decred/comments/c7ir8d/decred_wallet_for_ios_release_client_2/
 
-[dcrdata](https://github.com/decred/dcrdata): {market.dcrdata.org}
+[dcrdata](https://github.com/decred/dcrdata): [Market data](https://explorer.dcrdata.org/market) was added to dcrdata, charts showing aggregated order books and market depth for a selection of exchanges that list Decred. 
 
 [Ticket splitting](https://github.com/matheusd/dcr-split-ticket-matcher): {}
 
@@ -131,12 +131,13 @@ There were 2 new proposals published:
 
 This [graph](https://twitter.com/RichardRed0x/status/1139860218010058753) shows Politeia vote participation over time.
 
+For a more in depth review of what's been happening on Politeia, check out the [two](https://medium.com/politeia-digest/issue-17-may-28-june-9-bc5bb77e4f6c) [issues](https://medium.com/politeia-digest/issue-18-june-10-june-29-97d140569ad0) of Politeia Digest published in June.
 
 Following [questions](https://www.reddit.com/r/decred/comments/bx00fu/so_about_the_exmo_exchange/) on Reddit, Exmo posted a short [update](https://twitter.com/Exmo_Com/status/1138020825137930240) and went on to list DCR on Jun 13.
 
 A number of posts on the /r/decred subreddit have sought to poll the Decred community about the [optimal Politeia approval threshold](https://www.reddit.com/r/decred/comments/bynidz/poll_optimal_politeia_pass_threshold/), [renaming Decrediton to Declaration](https://www.reddit.com/r/decred/comments/c4ilpw/poll_rename_decrediton_to_declaration/), considering whether it should be [called something other than a wallet](https://www.reddit.com/r/decred/comments/c52hqd/question_is_a_hybrid_finance_governance_tool/), and asking whether Decred should start [using DAO instead of DAE](https://www.reddit.com/r/decred/comments/c02geh/poll_rename_dae_to_dao/) to describe the decentralized stakeholder governance of the project.
 
-The last one can be considered a "soft proposal" by @s_ben to stop using DAE (Decentralized Autonomous Entity) and start using DAO (Decentralized Autonomous Organization) when describing the organization of the Decred project. The rationale was to position Decred approach as relevant to the DAO concept and one of the projects to watch in that space. There was strong support for 
+The last one can be considered a "soft proposal" by @s_ben to stop using DAE (Decentralized Autonomous Entity) and start using DAO (Decentralized Autonomous Organization) when describing the organization of the Decred project. The rationale was to position Decred approach as relevant to the DAO concept and one of the projects to watch in that space. 
 
 @s_ben also asked this question in chats, and there appeared to be good support for the change (as captured in this [comment](https://www.reddit.com/r/decred/comments/c02geh/poll_rename_dae_to_dao/er1g4px)). @s_ben then went ahead and opened Pull Requests to change the term in the limited number of places where it was being used in docs and on decred.org.
 
@@ -232,7 +233,6 @@ Attended:
 * 19 Jun - [Reston Virginia Golang meetup](https://www.meetup.com/Golang-Reston/events/sfsjmpyzjbzb/) - Virginia, USA. @akinsawyerr presented Decred to an audience of 21 Golang developers.
 * 26 Jun - [SF Decred Devs x Coinbase Custody Happy Hour](https://www.meetup.com/San-Francisco-Decred-Meetup/events/262420787/) - San Francisco, USA. https://twitter.com/CryptoLeslie/status/1144092778017648641
 * 20 Jun - [Beijing Decred Meetup](https://twitter.com/DecredCN/status/1138739545594220544) - Beijing, China. Decred was represented by @changhugo and @Dominic, see @changhugo's writeup [here](https://github.com/decredcommunity/events/blob/master/reports/20190620-first-meetup-beijing-china.md). The event was attended by 100 people and live streamed to over 4,000 viewers. 
-
 * 19-23 Jun - [Campus Party Brasilia](https://brasil.campus-party.org/) - Brasilia, Brazil. Decred was [well](https://twitter.com/Decred_BR/status/1141782527637688322) [represented](https://twitter.com/Decred_BR/status/1141767693344935941) for another year at Campus Party. @matheusd has written up a [report](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$156172492478087gSMWo:matrix.org?via=decred.org&via=matrix.org) in chat, describing a successful event where Decred had a strong presence and participated in 3 different activities (crypto for kids play time, an LN paywall workshop and participation in a main stage panel).
 * 28 Jun - [Community Update on all things Decred](https://twitter.com/DecredAustralia/status/1142725855476477952) - Melbourne, Australia
 
