Polished the text about the DAE-DAO change

--- a/journal/201906.md
+++ b/journal/201906.md
@@ -137,6 +137,9 @@ Following [questions](https://www.reddit.com/r/decred/comments/bx00fu/so_about_t
 
 A number of posts on the /r/decred subreddit have sought to poll the Decred community about the [optimal Politeia approval threshold](https://www.reddit.com/r/decred/comments/bynidz/poll_optimal_politeia_pass_threshold/), [renaming Decrediton to Declaration](https://www.reddit.com/r/decred/comments/c4ilpw/poll_rename_decrediton_to_declaration/), considering whether it should be [called something other than a wallet](https://www.reddit.com/r/decred/comments/c52hqd/question_is_a_hybrid_finance_governance_tool/), and asking whether Decred should start [using DAO instead of DAE](https://www.reddit.com/r/decred/comments/c02geh/poll_rename_dae_to_dao/) to describe the decentralized stakeholder governance of the project.
 
+{SB: polished the text about the DAE-DAO change. Let me know if this violates the DJ conflict of interest rules:)}
+The last poll (to rename the DAE to a DAO), can be considered a "soft proposal" by @s_ben. The rationale behind this proposal being that, while the name DAE (Distributed Autonomous Entity) was originally chosen to avoid association with the Ethereum [DAO hack](https://www.google.com/search?q=ethereum+dao+hack&oq=ethereum+dao+hack&aqs=chrome..69i57.2800j0j1&sourceid=chrome&ie=UTF-8), DAOs have since become a hot topic in crypto, with little association in the popular imagination with the DAO hack. Because Decred arguably has a more legitimate claim on this term than other projects, having already built a functioning DAO (which is producing this newsletter), it makes more sense to be part of the conversation. A Politeia proposal was considered. However there were no objections to the change in various comm channels (as captured in this [comment](https://www.reddit.com/r/decred/comments/c02geh/poll_rename_dae_to_dao/er1g4px)), and the rough consensus was that, barring any strong opposition, such a change did not require a Politeia proposal. @s_ben has changed references in the [docs](https://docs.decred.org/governance/politeia/overview/#decentralized-autonomous-organization-dao) and has submitted Pull Requests to change the term on decred.org. 
+
 The last one can be considered a "soft proposal" by @s_ben to stop using DAE (Decentralized Autonomous Entity) and start using DAO (Decentralized Autonomous Organization) when describing the organization of the Decred project. The rationale was to position Decred approach as relevant to the DAO concept and one of the projects to watch in that space. 
 
 @s_ben also asked this question in chats, and there appeared to be good support for the change (as captured in this [comment](https://www.reddit.com/r/decred/comments/c02geh/poll_rename_dae_to_dao/er1g4px)). @s_ben then went ahead and opened Pull Requests to change the term in the limited number of places where it was being used in docs and on decred.org.
