Process Dev/dcrd

--- a/journal/201906.md
+++ b/journal/201906.md
@@ -6,14 +6,14 @@
 
 ## Development
 
-{add below overview of activity for each project. add any other project that warranets a paragraph, drop projects without notable updates. for each project the order of reporting is: changes released > merged to master > started work > discussions and future plans}
-
 [dcrd](https://github.com/decred/dcrd): 
 
-SB: lots of smaller looking PRs this mo, not sure what is important or if there's a larger theme here...
-
-* certgen: Support Ed25519 cert generation on Go 1.13 {SB: update to support new version of go} https://github.com/decred/dcrd/pull/1757
-* edwards: Introduce v2 module.{SB: not sure what Edwards module is, is it important?} https://github.com/decred/dcrd/pull/1762 
+* [Introduced](https://github.com/decred/dcrd/pull/1767) v2 of the `dcrutil` module to reduce coupling and prevent subtle bugs in handling addresses.
+* Large codebase upgrade to introduce v2 of `chaincfg` module [completed](https://github.com/decred/dcrd/pull/1698). Among some issues it addressed are: reduce the surface of the critical consensus code by defining block 1 payouts as scripts instead of addresses, remove undesired side effects upon importing the package, and improve organization of network parameters. Subsequent commits carefully upgraded depending modules to use the new version - this is a challenge of performing a large scale change on a repository that must build and pass all tests on each and every commit, and each commit must be maximally reviewable.
+* [Introduced](https://github.com/decred/dcrd/pull/1774) v2 of the `txscript` module to use new versions of `chaincfg` and `dcrutil` modules. Opportunity of the version bump was taken to also address several issues in the v1.
+* Overhaul of the background template generator covered in [May issue](201905.md) was [merged](https://github.com/decred/dcrd/pull/1748).
+* Added [support](https://github.com/decred/dcrd/pull/1757) for generation of Ed25519 TLS certificates on Go 1.13
+* Lots of smaller codebase and test improvements.
 
 [dcrwallet](https://github.com/decred/dcrwallet):
 
