--- a/journal/201906.md
+++ b/journal/201906.md
@@ -308,7 +308,7 @@ Selected Reddit posts:
 
 Selected Twitter discussions:
 
-More wild not-quite-maximalists were spotted on twitter this month, people who would consider themselves Bitcoiners but who also have a fondness for Decred. Apparently there are more of these closeted Decred fans, who dare not speak out about the cred because it would raise the ire of people in their circle.
+More wild not-quite-maximalists were spotted on twitter this month, people who would consider themselves Bitcoiners but who also have a fondness for Decred. Apparently there are more of these closeted Decred fans, who dare not speak out about the cred because it would result in a loss of status in their circle.
 
 * [@Ammarooni](https://twitter.com/Ammarooni/status/1145213941146181632) thread about how "Bitcoin is addressing structural shortcomings of fiat money that aren’t immediately visible to the naked eye, but will become prominent over time. Decred is addressing the shortcomings of Bitcoin that aren’t prevalent today, but may become manifested over time."
 * @Checkmate tweeted a [thread](https://twitter.com/_Checkmatey_/status/1142918632546156544) about Dered as a digital organism driven by a human hive-mind with skin in the game, then went on to [compare](https://twitter.com/_Checkmatey_/status/1145944145141411840) its stock-to-flow with Bitcoin's and finally issue a [challenge](https://twitter.com/_Checkmatey_/status/1145764832362319872) to all Bitcoiners: spend one month studying Decred and come out believing it is not a worthy number 2 to Bitcoin.
