Polish text governance

--- a/journal/201906.md
+++ b/journal/201906.md
@@ -136,12 +136,7 @@ A number of posts on the /r/decred subreddit have sought to poll the Decred comm
 
 The last poll (to rename the DAE to a DAO), can be considered a "soft proposal" by @s_ben. The rationale behind this proposal being that, while the name DAE (Distributed Autonomous Entity) was originally chosen to avoid association with the Ethereum [DAO hack](https://www.google.com/search?q=ethereum+dao+hack&oq=ethereum+dao+hack&aqs=chrome..69i57.2800j0j1&sourceid=chrome&ie=UTF-8), DAOs have since become a hot topic in crypto, with little association in the popular imagination with the DAO hack. Because Decred arguably has a more legitimate claim on this term than other projects, having already built a functioning DAO (which is producing this newsletter), it makes more sense to be part of the conversation. A Politeia proposal was considered. However there were no objections to the change in various comm channels (as captured in this [comment](https://www.reddit.com/r/decred/comments/c02geh/poll_rename_dae_to_dao/er1g4px)), and the rough consensus was that, barring any strong opposition, such a change did not require a Politeia proposal. @s_ben has changed references in the [docs](https://docs.decred.org/governance/politeia/overview/#decentralized-autonomous-organization-dao) and has submitted Pull Requests to change the term on decred.org. 
 
-The last one can be considered a "soft proposal" by @s_ben to stop using DAE (Decentralized Autonomous Entity) and start using DAO (Decentralized Autonomous Organization) when describing the organization of the Decred project. The rationale was to position Decred approach as relevant to the DAO concept and one of the projects to watch in that space. 
-
-@s_ben also asked this question in chats, and there appeared to be good support for the change (as captured in this [comment](https://www.reddit.com/r/decred/comments/c02geh/poll_rename_dae_to_dao/er1g4px)). @s_ben then went ahead and opened Pull Requests to change the term in the limited number of places where it was being used in docs and on decred.org.
-
-While some of these polls and the discussions around them have been interesting, there are problems with using reddit and polling sites to gauge the opinions of Decred stakeholders - these are open to people who are not stakeholders, and allow for the polls/posts to be arbitrarily deleted or modified by their creator. In discussion about this phenomenon there seems to be strong support for a Decred version of reddit, based on Politeia, which would allow for a limited number of ticket-voter polls to be created.
-
+While some of these polls and the discussions around them have been interesting, it has been noted by community members that there are problems with using reddit and polling sites to gauge the opinions of Decred stakeholders. These platforms are open to people who are not stakeholders, and allow for the polls/posts to be arbitrarily deleted or modified by their creator. In discussion about this phenomenon there seems to be strong support for a Decred version of Reddit, based on Politeia, which would allow for a limited number of ticket-voter polls to be created.
 
 ## Network
 
