Process Dev/Decrediton

--- a/journal/201906.md
+++ b/journal/201906.md
@@ -21,8 +21,6 @@
 
 [dcrwallet](https://github.com/decred/dcrwallet):
 
-Merged:
-
 * Changed default [TLS curve](https://github.com/decred/dcrwallet/pull/1468) to a more secure P-256.
 * Added support and enabled [Ed25519](https://github.com/decred/dcrwallet/pull/1477) TLS certificates by default on Go 1.13.
 * Added [`ticketbuyer.limit`](https://github.com/decred/dcrwallet/pull/1476) flag to limit max tickets bought per block.
@@ -38,13 +36,14 @@ Work is [in progress](https://github.com/decred/dcrwallet/pull/1471) to allow ar
 
 [Decrediton](https://github.com/decred/decrediton): 
 
-Merged
-* Refactor config.js https://github.com/decred/decrediton/pull/2129
+* Internal improvements of handling [configuration](https://github.com/decred/decrediton/pull/2129). {any more to say here?}
+* Automatically [reduce sidebar](https://github.com/decred/decrediton/pull/2127) on small screens.
+* Bug fixes and maintenance.
 
-Open
-* [ln] Initial Version https://github.com/decred/decrediton/pull/2107
+In progress:
 
-Work on embedding basic Lightning functionality (open/close channels, funding/withdrawing funds, create invoices, send payments) into Decrediton is nearing completion. {Is there any more we can say here? Expected release date (roughly)? Will this trigger another version bump (1.5.0?)}. Progress continues on refactoring Decrediton to use a finite state machine continues, along with minor UI tweaks and bug fixes. 
+* [LN wallet](https://github.com/decred/decrediton/pull/2107) integration. {is there any more we can say here? Expected release date (roughly)? Will this trigger another version bump (1.5.0?)}
+* PoC to use a finite [state machine](https://github.com/decred/decrediton/pull/2130) to better manage complexity and improve correctness during startup.
 
 [Politeia](https://github.com/decred/politeia): Incremental improvements and bug fixing, with most of the improvements being related to the Contractor Management System use of Politeia. Friction in the process of submitting invoices has been significantly reduced. A full Politeia redesign to clean up the UI and make it consistent with Decred branding is [underway](https://twitter.com/lukebp_/status/1147528570581000193) and should launch within a month or so. 
 
