--- a/journal/201906.md
+++ b/journal/201906.md
@@ -59,20 +59,7 @@ In response to a question about BTC-DCR swaps on LN, @matheusd [clarified](https
 
 [dcrandroid](https://github.com/decred/dcrandroid): 
 
-minor bug fixes and UI improvements, new translations for [Spanish](https://github.com/decred/dcrandroid/pull/363), [Portugese (Brazilion)](https://github.com/decred/dcrandroid/pull/367) and [Russian](https://github.com/decred/dcrandroid/pull/381), and a new send and estimation [function](https://github.com/decred/dcrandroid/pull/371) {SB: does 'send & estimate function' make sense to other people? What is exactly estimated?}
-{SB: summary so far: looks like minor bug fixes and UI improvements, plus new translations and new send & estimate function}
-
-Merged
-
-* Portugese (Brazilion) translation https://github.com/decred/dcrandroid/pull/367
-* Spanish translation https://github.com/decred/dcrandroid/pull/363
-* translations: set russian translation to any region (enables Russian translations for any region) https://github.com/decred/dcrandroid/pull/381
-* Implement new send & estimation function https://github.com/decred/dcrandroid/pull/371
-
-Open
-
-* Biometric implementation (fingerprint login, looks basically done just awaiting review?) https://github.com/decred/dcrandroid/pull/343
-* accounts: add option to rename account https://github.com/decred/dcrandroid/pull/386
+Minor bug fixes and UI improvements, new translations to [Spanish](https://github.com/decred/dcrandroid/pull/363), [Portuguese (BR)](https://github.com/decred/dcrandroid/pull/367), and a new send and estimation [function](https://github.com/decred/dcrandroid/pull/371) {please clarify what is exactly estimated?}.
 
 [dcrios](https://github.com/raedahgroup/dcrios):
 
