--- a/journal/201906.md
+++ b/journal/201906.md
@@ -197,13 +197,13 @@ New merchants:
 
 Progress continues to be made on outreach, with a big focus on education and making it easier to learn about Decred. There is concrete work being done to establish a social media playbook that will enable every community member to contribute. Checkmate has emerged on Twitter, introducing the #decredchallenge hashtag and challenging everyone to study Decred for 30 days and explain why Decred shouldn't be #2 on Coinmarketcap.com. Results have been very positive, and Decred social media activity and effectiveness have picked up significantly. It's very important to like and comment on Decred stories, as that increases the reach and enables more stories to be written.
 
-Building on education, website work is coming close to production, with a new intorductory video and new subpages on Secure, Adaptable, Self-Funding, History, and a general repository on education. This work will help support community growth by making it easier to understand Decred.
+Building on education, website work is coming close to production, with a new introductory video and new subpages on Secure, Adaptable, Self-Funding, History, and a general repository on education. This work will help support community growth by making it easier to understand Decred.
 
-Anshawblack released Decred in Depth podcast episodes featuring Luke Powell and Joel Monegro, and Dustrof and jy-p recorded Decred Assembly episodes, including Decred Distributed with Akin Sawyerr featuring Decred in Africa, Deep Dive with Marco Peereboom on the Treasury Proposal, and Decred Distributed with Richard Red. The latter two episodes will be released shortly.
+Anshawblack released Decred in Depth podcast episodes featuring Luke Powell and Joel Monegro, and Dustorf and jy-p recorded Decred Assembly episodes, including Decred Distributed with Akin Sawyerr featuring Decred in Africa, Deep Dive with Marco Peereboom on the Treasury Proposal, and Decred Distributed with Richard Red. The latter two episodes will be released shortly.
 
-Variuous events are being planned across the world, including Germany, Japan, China, and Toronto. The project has funding for a major event in Europe and Asia in 2019, and has not yet made a specific commitment, so please share in #Events_Planning if you have specific ideas. We rely on the community across the world to help identify and execute opportunities. 
+Various events are being planned across the world, including Germany, Japan, China, and Toronto. The project has funding for a major event in Europe and Asia in 2019, and has not yet made a specific commitment, so please share in #Events_Planning if you have specific ideas. We rely on the community across the world to help identify and execute opportunities. 
 
-Decred has made significant progress on the issue of governance. The staking bykine in Coindesk is a precursor to the Decred governance manifesto, and Akin Sawyerr spoke at the Wharton Governance conference alongside leading speakers in the field. There was much discussion of Decred and it was widely respected as a pioneer and leader in governance. Decred has been invited to speak at the next such conference in Japan.
+Decred has made significant progress on the issue of governance. The staking byline in Coindesk is a precursor to the Decred governance manifesto, and Akin Sawyerr spoke at the Wharton Governance conference alongside leading speakers in the field. There was much discussion of Decred and it was widely respected as a pioneer and leader in governance. Decred has been invited to speak at the next such conference in Japan.
 
 Ditto's June achievements:
 
