expanded duplicate votes todo

--- a/journal/201906.md
+++ b/journal/201906.md
@@ -47,11 +47,7 @@ In progress:
 
 [Politeia](https://github.com/decred/politeia): Incremental improvements and bug fixing, with most of the improvements being related to the Contractor Management System use of Politeia. Friction in the process of submitting invoices has been significantly reduced. A full Politeia redesign to clean up the UI and make it consistent with Decred branding is [underway](https://twitter.com/lukebp_/status/1147528570581000193) and should launch within a month or so.
 
-* {duplicate votes, looks notable}
-  * https://github.com/decred/politeia/issues/882
-  * the 15 votes will stay in the totals https://github.com/decred/politeia/pull/893
-  * _(missed in May issue)_
-  * {here on in Governance?}
+An [issue](https://github.com/decred/politeia/issues/882) with duplicate votes was identified and fixed in May, but missed in the May issue of the Journal. 15 duplicate votes on the Decentralize Treasury Spending proposal made it into the Politeia journal repository, due to a bug with how incoming votes were checked against the memory cache, with concurrent votes being added before the cache was re-checked. The bug was identified as soon as the first duplicate vote was submitted and has now been [fixed](https://github.com/decred/politeia/pull/893). 
 
 Progress was made towards running multiple Politeia instances [concurrently](https://github.com/decred/politeia/issues/665), making [email optional](https://github.com/decred/politeia/issues/860) and public [reporting](https://github.com/decred/politeia/pull/921) on expenses.
 
