--- a/journal/201906.md
+++ b/journal/201906.md
@@ -63,10 +63,7 @@ Minor bug fixes and UI improvements, new translations to [Spanish](https://githu
 
 [dcrios](https://github.com/raedahgroup/dcrios):
 
-Release of the iOS wallet nears, with [Release Candidate 2](https://github.com/raedahgroup/dcrios/compare/v1.0.0-rc1...v1.0.0-rc2) of the iOS Wallet is awaiting approval by the Apple App store. Bugs reported in Release Candidate 1 have been fixed and minor UI tweaks have been implemented. 
-
-* RC1 https://www.reddit.com/r/decred/comments/bxje6l/decred_wallet_for_ios_release_client_1/
-* RC2 https://www.reddit.com/r/decred/comments/c7ir8d/decred_wallet_for_ios_release_client_2/
+Release of the iOS wallet nears, with [Release Candidate 2](https://www.reddit.com/r/decred/comments/c7ir8d/decred_wallet_for_ios_release_client_2/) of the iOS Wallet is awaiting approval by the Apple App Store. Localization infrastructure and [Russian](https://github.com/raedahgroup/dcrios/pull/470) translation has been added, bugs reported in [Release Candidate 1](https://www.reddit.com/r/decred/comments/bxje6l/decred_wallet_for_ios_release_client_1/) have been fixed and minor UI tweaks have been implemented.
 
 [dcrdata](https://github.com/decred/dcrdata): [Market data](https://explorer.dcrdata.org/market) was added to dcrdata, charts showing aggregated order books and market depth for a selection of exchanges that list Decred. 
 
