--- a/journal/201906.md
+++ b/journal/201906.md
@@ -75,7 +75,7 @@ Release of the iOS wallet nears, with [Release Candidate 2](https://www.reddit.c
 
 [docs](https://github.com/decred/dcrdocs):
 
-Instances of DAE (Distributed Autonomous Entity) were replaced with DAO (Distributed Autonomous Organization) amid a broader [activity](https://github.com/decredcommunity/issues/issues/134) to use DAO. A new page adds details how the [algorithm](https://github.com/decred/dcrdocs/pull/963) used to pseudorandomly select tickets for voting works {SB: merged but not yet deployed}. 
+Instances of DAE (Distributed Autonomous Entity) were [replaced](https://github.com/decred/dcrdocs/pull/958) with DAO (Distributed Autonomous Organization). A new page adds details how the [algorithm](https://github.com/decred/dcrdocs/pull/963) used to pseudorandomly select tickets for voting works {SB: merged but not yet deployed}. 
 
 Other:
 
@@ -88,7 +88,7 @@ Dev activity stats for June: 283 active PRs, 321 master commits, 62K added and 2
 
 ## People
 
-Welcome to new first time contributors with code merged to master: Marton ([politeia](https://github.com/decred/politeia/commits?author=martonp)), Amos Ezeme ([dcrandroid](https://github.com/decred/dcrandroid/commits?author=crux25)), Quadri Anifowose ([dcrandroid](https://github.com/decred/dcrandroid/commits?author=Quadriyanney)), Lore [dcrandroid](https://github.com/decred/dcrandroid/commits?author=hanelore).
+Welcome to new first time contributors with code merged to master: Marton ([politeia](https://github.com/decred/politeia/commits?author=martonp)), Amos Ezeme ([dcrandroid](https://github.com/decred/dcrandroid/commits?author=crux25)), Quadri Anifowose ([dcrandroid](https://github.com/decred/dcrandroid/commits?author=Quadriyanney)), Lore ([dcrandroid](https://github.com/decred/dcrandroid/commits?author=hanelore)).
 
 DZ did his first "official" commit to the [dcrandroid](ttps://github.com/decred/dcrandroid/commits?author=denyszayets) repository but it should be noted that he is a long time decred contributor and was the one to do the entire Russian transaction for dcrandroid.
 
@@ -105,25 +105,26 @@ The following proposals were approved:
 * [Decred Open Source Research proposal: Phase 2](https://proposals.decred.org/proposals/67de0e901143400ae2f247391c4d5028719ffea8308fbc5854745ad859fb993f) - 90.2% approval
 * [Decentralized Exchange Specification Document](https://proposals.decred.org/proposals/a4f2a91c8589b2e5a955798d6c0f4f77f2eec13b62063c5f4102c21913dcaf32) - 98.4% approval
 * [Block Header Commitments Consensus Change](https://proposals.decred.org/proposals/0a1ff846ec271184ea4e3a921a3ccd8d478f69948b984445ee1852f272d54c58) - 99.2% approval
-* Commenters in the proposal and [on Reddit](https://www.reddit.com/r/decred/comments/buv18c/block_header_commitments_consensus_change_proposal/) appreciated how the proposal has sections for both technical and non technical audiences, and also noted how Decred's on-chain voting systems allows for elegant updates without years of fruitless discussions.
+
+  Commenters in the proposal and [on Reddit](https://www.reddit.com/r/decred/comments/buv18c/block_header_commitments_consensus_change_proposal/) appreciated how the proposal has sections for both technical and non technical audiences, and also noted how Decred's on-chain voting systems allows for elegant updates without years of fruitless discussions.
 
 There were 2 new proposals published:
 
 * [Supplemental Proposal For Decred Tutorials By Denni Lovejoy](https://proposals.decred.org/proposals/d8d7ff7ad138ed322422aaa4d2a3e1c61f296ae56a2c2316cc5ecd10cf8dd8bd). This proposal asks for the original budget of $750 for tutorial videos to be increased to $7,500. @Denni Lovejoy has asked for the proposal to be abandoned following comments opposing it. There is some ongoing discussion about how to handle these scenarios where work on a proposal goes significantly over budget.
 
-* [Decred  Media Campaign Proposal - Crypto Economy - 2019/2020](https://proposals.decred.org/proposals/1a367dcb91b55c60ad5fd038b219201154fcab965edd7a4639f157e409b1f4bf). This proposal requested $33,600 to promote Decred in a number of ways, including banner advertisements , press releases, a Decred giveaway and a newsletter. Comments remarked that some of these are already being well covered and others are not desirable, the proposal was then abandoned by its owner.
+* [Decred Media Campaign Proposal - Crypto Economy - 2019/2020](https://proposals.decred.org/proposals/1a367dcb91b55c60ad5fd038b219201154fcab965edd7a4639f157e409b1f4bf). This proposal requested $33,600 to promote Decred in a number of ways, including banner advertisements , press releases, a Decred giveaway and a newsletter. Comments remarked that some of these are already being well covered and others are not desirable, the proposal was then abandoned by its owner.
 
-This [graph](https://twitter.com/RichardRed0x/status/1139860218010058753) shows Politeia vote participation over time.
+This [graph](https://twitter.com/RichardRed0x/status/1139860218010058753) shows Politeia voter participation for the 28 proposals that have finished voting so far.
 
 For a more in depth review of what's been happening on Politeia, check out the [two](https://medium.com/politeia-digest/issue-17-may-28-june-9-bc5bb77e4f6c) [issues](https://medium.com/politeia-digest/issue-18-june-10-june-29-97d140569ad0) of Politeia Digest published in June.
 
-Following [questions](https://www.reddit.com/r/decred/comments/bx00fu/so_about_the_exmo_exchange/) on Reddit, Exmo posted a short [update](https://twitter.com/Exmo_Com/status/1138020825137930240) and went on to list DCR on Jun 13.
+Following [questions](https://www.reddit.com/r/decred/comments/bx00fu/so_about_the_exmo_exchange/) on Reddit, Exmo posted a short [update](https://twitter.com/Exmo_Com/status/1138020825137930240) and went on to [list](https://exmo.com/en/news_view?id=2776) DCR on Jun 18.
 
 A number of posts on the /r/decred subreddit have sought to poll the Decred community about the [optimal Politeia approval threshold](https://www.reddit.com/r/decred/comments/bynidz/poll_optimal_politeia_pass_threshold/), [renaming Decrediton to Declaration](https://www.reddit.com/r/decred/comments/c4ilpw/poll_rename_decrediton_to_declaration/), considering whether it should be [called something other than a wallet](https://www.reddit.com/r/decred/comments/c52hqd/question_is_a_hybrid_finance_governance_tool/), and asking whether Decred should start [using DAO instead of DAE](https://www.reddit.com/r/decred/comments/c02geh/poll_rename_dae_to_dao/) to describe the decentralized stakeholder governance of the project.
 
-The last poll (to rename the DAE to a DAO), can be considered a "soft proposal" by @s_ben. The rationale behind this proposal being that, while the name DAE (Distributed Autonomous Entity) was originally chosen to avoid association with the Ethereum [DAO hack](https://www.google.com/search?q=ethereum+dao+hack&oq=ethereum+dao+hack&aqs=chrome..69i57.2800j0j1&sourceid=chrome&ie=UTF-8), DAOs have since become a hot topic in crypto, with little association in the popular imagination with the DAO hack. Because Decred arguably has a more legitimate claim on this term than other projects, having already built a functioning DAO (which is producing this newsletter), it makes more sense to be part of the conversation. A Politeia proposal was considered. However there were no objections to the change in various comm channels (as captured in this [comment](https://www.reddit.com/r/decred/comments/c02geh/poll_rename_dae_to_dao/er1g4px)), and the rough consensus was that, barring any strong opposition, such a change did not require a Politeia proposal. @s_ben has changed references in the [docs](https://docs.decred.org/governance/politeia/overview/#decentralized-autonomous-organization-dao) and has submitted Pull Requests to change the term on decred.org. 
+The last poll (to rename the DAE to a DAO), can be considered a "soft proposal" by @s\_ben. The rationale behind this proposal being that, while the name DAE (Distributed Autonomous Entity) was originally chosen to avoid association with the Ethereum [DAO hack](https://www.google.com/search?q=ethereum+dao+hack), DAOs have since become a hot topic in crypto, with little association in the popular imagination with the DAO hack. Because Decred arguably has a more legitimate claim on this term than other projects, having already built a functioning DAO (which is producing this newsletter), it makes more sense to be part of the conversation. A Politeia proposal was considered. However there were no objections to the change in various comm channels (as captured in this [comment](https://www.reddit.com/r/decred/comments/c02geh/poll_rename_dae_to_dao/er1g4px)), and the rough consensus was that, barring any strong opposition, such a change did not require a Politeia proposal. @s\_ben has changed references in the [docs](https://docs.decred.org/governance/politeia/overview/#decentralized-autonomous-organization-dao) and has submitted a [pull request](https://github.com/decred/dcrweb/pull/681) to change the term on decred.org. Discussions and activity around this move are tracked in [this issue](https://github.com/decredcommunity/issues/issues/134).
 
-While some of these polls and the discussions around them have been interesting, it has been noted by community members that there are problems with using reddit and polling sites to gauge the opinions of Decred stakeholders. These platforms are open to people who are not stakeholders, and allow for the polls/posts to be arbitrarily deleted or modified by their creator. In discussion about this phenomenon there seems to be strong support for a Decred version of Reddit, based on Politeia, which would allow for a limited number of ticket-voter polls to be created.
+While some of these polls and the discussions around them have been interesting, it has been noted by community members that there are problems with using Reddit and polling sites to gauge the opinions of Decred stakeholders. These platforms are open to people who are not stakeholders, and allow for the polls/posts to be arbitrarily deleted or modified by their creator. In discussion about this phenomenon there seems to be strong support for a [Decred's version of Reddit](https://github.com/decredcommunity/issues/issues/38), based on Politeia, which would allow for a limited number of ticket-voter polls to be created.
 
 ## Network
 
