--- a/journal/201906.md
+++ b/journal/201906.md
@@ -128,27 +128,19 @@ While some of these polls and the discussions around them have been interesting,
 
 ## Network
 
-Hashrate: June's hashrate opened at ~504 Ph/s and closed ~540 Ph/s, bottoming at 369 Ph/s and peaking at 607 Ph/s throughout the month. Pool hashrate distribution as of Jul2: lab.antpool.com 18%, UUPool 17.7%, F2Pool 14%, Poolin 9.5%, BTC.com 9%, Luxor 2.2%, CoinMine 0.21%, BeePool 0.15%, suprnova 0.03% and others 29% per per [dcrstats.com](https://dcrstats.com/pow). Pool distribution numbers are approximate and cannot be accurately determined.
+Hashrate: June's hashrate opened at ~504 Ph/s and closed ~540 Ph/s, bottoming at 369 Ph/s and peaking at 607 Ph/s throughout the month. Pool hashrate distribution as of Jul 2: lab.antpool.com 18%, UUPool 17.7%, F2Pool 14%, Poolin 9.5%, BTC.com 9%, Luxor 2.2%, CoinMine 0.21%, BeePool 0.15%, suprnova 0.03% and others 29% per [dcrstats.com](https://dcrstats.com/pow). Pool distribution numbers are approximate and cannot be accurately determined.
 
-{helpful for PoS: https://charts.dcr.farm/d/000000003/proof-of-stake?orgId=1&from=1559381330622&to=1561886930623}
+Staking: 30-day average ticket price was 120 DCR (+4) per dcrstats.com. The price varied between 116.8-127.3 DCR. Locked amount was 4.75-4.84 million DCR, which corresponded to [48.01-49.03%](https://charts.dcr.farm/d/000000003/proof-of-stake?orgId=1&from=1559347200000&to=1561939200000) of the available supply.
 
-Staking: 30-day average ticket price was 120 DCR (+4) per dcrstats.com. The price varied between 116.78-127.29 DCR. Locked amount was 4.75-4.83 million DCR, which corresponded to [49-48%](https://charts.dcr.farm/d/000000003/proof-of-stake?orgId=1&from=1559327400000&to=1561919400000) of the available supply.
+Nodes: throughout June there were around 200 listening nodes and 340-510 total nodes per [dcr.farm](https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=1559347200000&to=1561939200000). As of Jul 8, roughly 80% runs v1.4.0, 9% runs dcrwallet v1.4.0 (SPV) and 4% runs v1.5.0(pre) dev builds.
 
-Looking at node stats from [dcr.farm](ttps://charts.dcr.farm/d/000000014/nodes?orgId=1&from=1559381330622&to=1561886930623). It shows an average of 426 nodes in the network,it also indicates that a large percentage of the network is on version 1.4.0.
+dcr.farm received a new [Lightning Network](https://charts.dcr.farm/d/DHPdAO4Wz/lightning-network?orgId=1) dashboard. As of Jul 8, it shows 15 nodes, 45 channels and a total capacity of 370 DCR.
 
-Throughout May it shows a large variation in the count of v1.4.0 nodes (103-237), but it has a nice chart of node version history that gives a general idea that the network is mostly on v1.4.0+ now.
+On Jun 27 DCR supply [crossed](https://twitter.com/raedahgroup/status/1144655370234880000) 10,000,000 DCR. 10 million DCR distributed means the genesis [premine](https://docs.decred.org/advanced/premine/) accounts for 17% of currently circulating DCR, PoW miners got 50%, PoS voters got 25% and the Treasury got 8%.
 
+There were support requests from ticket holders saying that their tickets have been missed by certain VSPs. Upon investigation it was discovered that [Grassfed](https://dcr.grassfed.network/) and [d1pool](https://d1pool.com) have been forked off from the network and have missed on these votes. Grassfed has responded and promised to keep up with future updates. We have been unable to reach d1pool and discussion is currently underway to remove them from the [list of VSPs](https://decred.org/vsp/) at decred.org.
 
-On June 27th decred supply crossed 10,000,000. [Raedahgroup](https://twitter.com/raedahgroup/status/1144655370234880000) made a tweet about it.
-
-We got a few support requests from ticketholders saying that their tickets have been missed by certain VSPs. On investigation, we found that [Grassfed](https://dcr.grassfed.network/) and [d1pool](https://d1pool.com) have been forked off from the network and have missed on these votes. Grassfed has responded to us and has promised to keep up with future updates. We have been unable to reach d1pool and discussion is currently underway to remove them from the list of approved VSPs.
-
-There has also been [dev](https://github.com/decred/dcrstakepool/issues/413) [talk](https://matrix.to/#/!HEeJkbPRpAqgAwhXWO:decred.org/$156207152510654HMiFp:decred.org?via=decred.org&via=matrix.org&via=zettaport.com) on how we could avoid these issues in the future. We also has some discussions on plans to get people to setup their own [voting wallets](https://matrix.to/#/!dhHYPTtCtvPSUfTepT:decred.org/$156207972910815kERGq:decred.org?via=decred.org&via=matrix.org&via=zettaport.com).
-
-
-## Mining
-
-{new miners, relevant news about existing miners, interesting events or stats}
+There has also been an [issue](https://github.com/decred/dcrstakepool/issues/413) and a [chat](https://matrix.to/#/!HEeJkbPRpAqgAwhXWO:decred.org/$156207152510654HMiFp:decred.org) on how these issues can be avoided in the future. Another discussed idea was a sustained effort to get more people set up their own [voting wallets](https://matrix.to/#/!dhHYPTtCtvPSUfTepT:decred.org/$156207972910815kERGq:decred.org).
 
 ## Integrations
 
