--- a/journal/201906.md
+++ b/journal/201906.md
@@ -144,30 +144,19 @@ There has also been an [issue](https://github.com/decred/dcrstakepool/issues/413
 
 ## Integrations
 
-Exmo exchange [delivered](https://exmo.com/en/news_view?id=2776) on their [proposal](https://proposals.decred.org/proposals/950e8149e594b01c010c1199233ab11e82c9da39174ba375d286dc72bb0a54d7) and enabled  DCR/BTC, DCR/RUB, DCR/UAH pairs on their exchange. 
+Exmo delivered on their [proposal](https://proposals.decred.org/proposals/950e8149e594b01c010c1199233ab11e82c9da39174ba375d286dc72bb0a54d7) and [enabled](https://exmo.com/en/news_view?id=2776) DCR/BTC, DCR/RUB and DCR/UAH pairs on Jun 18. 
 
-Vertbase exchange added both [recurring orders](https://twitter.com/vertbase/status/1141735926059716611) and an option to [Buy and Sell](https://twitter.com/vertbase/status/1141735926059716611) digital assets using their exchange.
+Vertbase added [recurring orders](https://twitter.com/vertbase/status/1141826092564701184) and an option to [sell](https://twitter.com/vertbase/status/1141735926059716611) digital assets for USD for US customers.
 
-EliteX [listed](https://twitter.com/elitexcrypto/status/1143044131800977409) Decred and also wrote an [article](https://medium.com/@elitexexchange/the-lowdown-on-decred-dcr-2a36520079f5) to explain decred to their users.
+EliteX [listed](https://twitter.com/elitexcrypto/status/1143044131800977409) DCR and wrote an [article](https://medium.com/@elitexexchange/the-lowdown-on-decred-dcr-2a36520079f5) to explain Decred to their users.
 
 MXC Exchange [added](https://twitter.com/wanbihou/status/1143846271645437952) a DCR/USDT exchange pair.
 
-Bleutrade announced DCR to be delisted among a mass cleanup on Jul 1 https://bleutrade.com/announcements/ https://www.reddit.com/r/decred/comments/c86a75/bleutrade_will_delist_dcr_20190715_1500_utc/ (second cleanup this year)
+Bleutrade [announced](https://bleutrade.com/announcements/) DCR to be delisted among a mass cleanup on Jul 15 - the second delisting run this year ([discussion](https://www.reddit.com/r/decred/comments/c86a75/bleutrade_will_delist_dcr_20190715_1500_utc/)). Bleutrade was very [supportive](https://twitter.com/BLEUTRADE/status/999683568791060481) of Decred. It was the first to list Decred and it did so on the very first day of the network on [Feb 8, 2016](https://bitcointalk.org/index.php?topic=1290358.1640).
 
-{SB: makes sense to put this here, but I think it could also go in Governance section. Also, this text is just copied from the latest [pi digest](https://medium.com/politeia-digest/issue-18-june-10-june-29-97d140569ad0), so maybe we want to reword a little}
-Decred’s part of the Trust Wallet integration is nearing completion. Approved by voters in March, this [proposal](https://proposals.decred.org/proposals/2ababdea7da2b3d8312a773d477272135a883ed772ba99cdf31eddb5f261d571) split work between the Trust Wallet team, which was tasked with the core wallet integration, and Decred, which was tasked with integrating with and hosting the Blockbook server Trust Wallet uses to host transaction data. Core wallet integration has been completed by Trust Wallet, and Decred’s Blockbook integration is [nearing completion](https://github.com/trezor/blockbook/pull/216)), with one final issue remaining regarding how to represent Decred’s unique PoS voting mechanism in Blockbook data.
+Decred's part of the Trust Wallet integration is [nearing completion](https://github.com/trezor/blockbook/pull/216). Approved by voters in March, this [proposal](https://proposals.decred.org/proposals/2ababdea7da2b3d8312a773d477272135a883ed772ba99cdf31eddb5f261d571) split work between the Trust Wallet team, which was tasked with the core wallet integration (complete), and Decred, which was tasked with integrating with and hosting the Blockbook server that Trust Wallet uses to host transaction data.
 
 Warning: the authors of Decred Journal have no idea about the trustworthiness of any of the services above. Please do your own research before trusting your personal information or assets to any entity.
-
-## Adoption
-
-New merchants:
-
-* {}
-
-{applications of Decred blockchain and related projects: Politeia, dcrtime, atomicswap}
-
-{investment adoption}
 
 ## Outreach
 
