Add voter participation %s

--- a/journal/201906.md
+++ b/journal/201906.md
@@ -100,11 +100,11 @@ Below is the proposal status as of Jul 1.
 
 The following proposals were approved:
 
-* [Decred Bug Bounty Proposal: Phase 2](https://proposals.decred.org/proposals/073694ed82d34b2bfff51e35220e8052ad4060899b23bc25791a9383375cae70) - 93.5% approval
-* [Ditto Communications Proposal for Decred: Phase 2](https://proposals.decred.org/proposals/52ea110ea061c72d3b31ed2f5635720b212ce5e3eaddf868d60f53a3d18b8c04) - 75.8% approval
-* [Decred Open Source Research proposal: Phase 2](https://proposals.decred.org/proposals/67de0e901143400ae2f247391c4d5028719ffea8308fbc5854745ad859fb993f) - 90.2% approval
-* [Decentralized Exchange Specification Document](https://proposals.decred.org/proposals/a4f2a91c8589b2e5a955798d6c0f4f77f2eec13b62063c5f4102c21913dcaf32) - 98.4% approval
-* [Block Header Commitments Consensus Change](https://proposals.decred.org/proposals/0a1ff846ec271184ea4e3a921a3ccd8d478f69948b984445ee1852f272d54c58) - 99.2% approval
+* [Decred Bug Bounty Proposal: Phase 2](https://proposals.decred.org/proposals/073694ed82d34b2bfff51e35220e8052ad4060899b23bc25791a9383375cae70) - 93.5% approval, 31.5% voter participation
+* [Ditto Communications Proposal for Decred: Phase 2](https://proposals.decred.org/proposals/52ea110ea061c72d3b31ed2f5635720b212ce5e3eaddf868d60f53a3d18b8c04) - 75.8% approval, 29.2% voter participation
+* [Decred Open Source Research proposal: Phase 2](https://proposals.decred.org/proposals/67de0e901143400ae2f247391c4d5028719ffea8308fbc5854745ad859fb993f) - 90.2% approval, 32.4% voter participation
+* [Decentralized Exchange Specification Document](https://proposals.decred.org/proposals/a4f2a91c8589b2e5a955798d6c0f4f77f2eec13b62063c5f4102c21913dcaf32) - 98.4% approval, 30% voter participation
+* [Block Header Commitments Consensus Change](https://proposals.decred.org/proposals/0a1ff846ec271184ea4e3a921a3ccd8d478f69948b984445ee1852f272d54c58) - 99.2% approval, 33.5% voter participation
 
   Commenters in the proposal and [on Reddit](https://www.reddit.com/r/decred/comments/buv18c/block_header_commitments_consensus_change_proposal/) appreciated how the proposal has sections for both technical and non technical audiences, and also noted how Decred's on-chain voting systems allows for elegant updates without years of fruitless discussions.
 
